# pedestal_subtract

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: pedestal_subtract.json  pedestal_subtract_LBC.json  pedestal_subtract_UChicago.json
pedestal_subtract/: __init__.py  __main__.py  calibrate.py  cli_config.py  constants.py  core.py  dark_current.py  double_gauss_model.py  fit_zero_one.py  fits_io.py  pedestal.py  plotting.py  stitch_fits.py  summary.py
